# ODME

./: .classpath  .dockerignore  .gitignore  .project  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  Dockerfile  LICENSE  MainGraph.xml  README.md  checkstyle-suppressions.xml  checkstyle.xml  dependency-reduced-pom.xml  pom.xml  project-structure.txt  refactor_errors.py  spotbugs-exclude.xml  temp_script.py
.github/: dependabot.yml
Adnan/: Adnan.ssdcon  Adnan.xml  AdnanGraph.xml  projectTree.xml
BT_Demo/: BT_DemoGraph.xml  projectTree.xml  ses.xsd
Dynamic/: Dynamic.ssdvar  DynamicGraph.xml  outputgraphxmlforxsdvar.xml  scenarios.json  xmlforxsd.xml  xsdfromxml.xsd
MBSE4AI/: MBSE4AI.ssdvar  MBSE4AIGraph.xml  graphxmluniformity.xml  scenarios.json
Main/: Main.ssdLimit  Main.ssdbeh  Main.ssdflag  Main.ssdvar  Main.xml  MainGraph.xml  MainProject.xml  graphxml.xml  graphxmluniformity.xml  outputgraphxmlforxsdvar.xml  projectTree.xml  scenarios.json  ses.xsd  xmlforxsd.xml
aviation/: aviation.xml  aviationProject.xml  graphxml.xml  projectTree.xml  xmlforxsd.xml  xsdfromxml.xsd
launcher/: README-packaging.md  build-linux-app.sh  (+8 more)
odme-python/: pyproject.toml
odme-python/examples/: capture_runner.py  msfs_runway_sign.py  msfs_weather.py  runway_sign_demo.py  runway_sign_msfs.py
odme-python/odme/: __init__.py  cli.py  export.py  model.py  sampling.py
odme-python/tests/: test_capture_runner.py  test_demo.py  test_export.py  test_model.py  test_msfs_runway_sign.py  test_runway_sign_msfs.py  test_sampling.py
(+352 files in other folders)
